Add jacoco integration, fix #7, fix #8